amendments after validation testing

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,7 +6,7 @@
 <header>
     <h1>Login</h1>
 </header>
-
+<!-- User Login Form with option to register an account -->
 <div id="logging-in">
     <div>
         <img src="https://res.cloudinary.com/sjb21/image/upload/v1644420311/monika-grabkowska-TAj4X5-eRqE-unsplash-min_oopdwn.jpg"
@@ -14,20 +14,19 @@
     </div>
     <form method="POST" action="" class="form accounts-forms login-form">
 
-        <!--csrf_token is used to prevent hackers calling my webpage 
-            from another site. How to create login page taken from Hacker
-            Shack YouTube Channel. Link in README. -->
+        <!--csrf_token is used to prevent hackers calling my webpage from another site. 
+            Video on How to create login page taken from Hacker Shack YouTube Channel. Link in README. -->
 
         {% csrf_token %}
 
         <div class="form-input-fields">
             <label for="username">Username</label>
-            <input id="username" name="username" type="username" class="form-input form-control" id="inputUsername3">
+            <input id="username" name="username" type="text" class="form-input form-control">
         </div>
 
         <div class="form-input-fields">
             <label for="password">Password</label>
-            <input id="password" name="password" type="password" class="form-input form-control" id="inputPassword3">
+            <input id="password" name="password" type="password" class="form-input form-control">
         </div>
 
         <div class="form-input-fields">
