--- a/templates/delete_recipe.html
+++ b/templates/delete_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Foody Family | Delete Recipe{% endblock %}
 {% block content %}
-
+<!-- Delete confirmation page, prevents user from accidentally deleting their recipe. -->
 <h1>Delete {{ recipe.title }} Recipe</h1>
 
 <div class="delete-recipe">
