--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Foody Family | My Pending Recipes{% endblock %}
 {% block content %}
+<!-- Recipes pending approval page, lists all of the users recipes that are to be approved by the admin. -->
 
 <h1>My Recipes Pending Approval</h1>
 
-<!-- Below from Code Institutes CodeStar project -->
+<!-- Below from Code Institutes CodeStar project, displays messages at top of page. -->
 {% if messages %}
 <div class="container app-messages">
     <div class="row">
@@ -20,7 +21,8 @@
 </div>
 {% endif %}
 
-<!--Recipe cards for users own recipes pending approval -->
+<!-- Recipe cards for users own recipes pending admin approval with ability 
+    to delete and update own recipes. Card code from Bootstrap -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 mt-4 left">
@@ -44,7 +46,7 @@
                                             class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
                                 <span class="del-btn">
-                                    <a href="{% url 'delete_draft' recipes.pk %}" class="btn btn-danger" class="del"><i
+                                    <a href="{% url 'delete_draft' recipes.pk %}" class="btn btn-danger del"><i
                                             class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
