--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <h1>Change Password</h1>
+<!-- Change Password Form -->
 
-<div class="container-fluid" id="change-pw" class="password-form">
+<div class="container-fluid password-form" id="change-pw">
     <div class="row">
         <form method="POST" action="" class="form">
             {% csrf_token %}
