--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- Base template containing Head, Navbar, Footer and main tags which are extended to all templates -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -65,7 +66,7 @@
                     {% else %}
                     <li class="nav-item dropdown">
                         <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button"
-                            aria-expanded="false" name="login ">Login/Register</a>
+                            aria-expanded="false" name="login">Login/Register</a>
                     </li>
                     {% endif %}
                 </ul>
