--- a/templates/multi_input_widget.html
+++ b/templates/multi_input_widget.html
@@ -1,13 +1,15 @@
+<!-- Instructions Input Widget, used on Add Recipe and Update Recipe Pages -->
 <div>
-            {% include "django/forms/widgets/textarea.html" with widget=widget  %}
-            <button type="button" id="add_step">Add Instruction</button>
-            <div id="step_list">
-            {% for value in widget.extra_values %}
-            <div class="add-instruction" id="instruction_{{ forloop.counter0 }}">
-                <textarea type="text" name="instructions" value="{{value}}" class="instructions" cols="30" rows="3">{{value}}</textarea>
-                <button type="button" onclick="deleteInstruction(this)" class="delete_instruction"
-                    data-instruction-id="instruction_{{ forloop.counter0 }}">Delete</button>
-            </div>
-            {%endfor%}
+    {% include "django/forms/widgets/textarea.html" %}
+    <button type="button" id="add_step">Add Instruction</button>
+    <div id="step_list">
+        {% for value in widget.extra_values %}
+        <div class="add-instruction" id="instruction_{{ forloop.counter0 }}">
+            <textarea name="instructions" value="{{value}}" class="instructions" cols="30"
+                rows="3">{{value}}</textarea>
+            <button type="button" onclick="deleteInstruction(this)" class="delete_instruction"
+                data-instruction-id="instruction_{{ forloop.counter0 }}">Delete</button>
         </div>
+        {%endfor%}
+    </div>
 </div>
