remove commented out code

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <!-- Navigation Bar - can only view add, edit and delete recipe pages if user has an account -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand header" href="{% url 'home' %}">Foody Family</a>
