--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -5,6 +5,22 @@
 <h1>Change Password</h1>
 <!-- Change Password Form -->
 
+<!-- Below from Code Institutes CodeStar project to display messages at top of page. -->
+{% if messages %}
+<div class="container app-messages">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endif %}
+
 <div class="container-fluid password-form" id="change-pw">
     <div class="row">
         <form method="POST" action="" class="form">
