--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -22,7 +22,8 @@
 </div>
 {% endif %}
 
-<!-- load cloudinary allows user to upload their own images -->
+<!-- load cloudinary allows user to upload their own images
+Code from Django YouTube Video, link in README -->
 
 {% load cloudinary %}
 
